--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,11 @@
     "purescript-maybe": "^3.0.0",
     "purescript-nullable": "^3.0.0",
     "purescript-eff": "^3.1.0",
-    "purescript-exceptions": "^3.1.0"
+    "purescript-exceptions": "^3.1.0",
+    "purescript-dom": "^4.15.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
-    "purescript-debug": "^3.0.0",
-    "purescript-refs": "^3.0.0"
+    "purescript-debug": "^3.0.0"
   }
 }
