--- a/bower.json
+++ b/bower.json
@@ -7,14 +7,16 @@
     "output"
   ],
   "dependencies": {
-    "clappr": "0.2.86",
+    "clappr": "git@github.com:paluh/clappr#master",
     "purescript-record": "^0.2.6",
     "purescript-functions": "^3.0.0",
     "purescript-maybe": "^3.0.0",
     "purescript-nullable": "^3.0.0",
     "purescript-eff": "^3.1.0",
     "purescript-exceptions": "^3.1.0",
-    "purescript-dom": "^4.15.0"
+    "purescript-dom": "^4.15.0",
+    "purescript-foreign": "^4.0.1",
+    "purescript-foreign-generic": "^5.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
