--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,16 @@
 {
   "dependencies": {
     "clappr": "git@github.com:clappr/clappr#master",
-    "purescript-record": "^0.2.6",
+    "purescript-dom": "^4.15.0",
+    "purescript-eff": "^3.1.0",
+    "purescript-exceptions": "^3.1.0",
+    "purescript-foreign": "^4.0.1",
+    "purescript-foreign-generic": "^5.0.0",
     "purescript-functions": "^3.0.0",
     "purescript-maybe": "^3.0.0",
     "purescript-nullable": "^3.0.0",
-    "purescript-eff": "^3.1.0",
-    "purescript-exceptions": "^3.1.0",
-    "purescript-dom": "^4.15.0",
-    "purescript-foreign": "^4.0.1",
-    "purescript-foreign-generic": "^5.0.0"
+    "purescript-pux": "^12.0.0",
+    "purescript-record": "^0.2.6"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
