Handle autoPlay and mute options

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "clappr": "git@github.com:paluh/clappr#plugin-release",
+    "clappr0-hlsjs-provider": "git+https://github.com/streamroot/clappr0-hlsjs-provider.git#dev",
+    "streamroot-hlsjs-p2p-bundle": "npm:streamroot-hlsjs-p2p-bundle#4.3.63",
     "purescript-dom": "^4.15.0",
     "purescript-eff": "^3.1.0",
     "purescript-exceptions": "^3.1.0",
