--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "clappr": "^0.2.94",
-    "clappr-ad-plugin": "git+https://github.com/canny-wasp/clappr-vast-ad-plugin.git",
-    "clappr-thumbnails-plugin": "^3.7.0",
-    "hls.js": "^0.9.1",
-    "vast-ads": "git+https://git@github.com/mycujoo/clappr-vast-plugin.git"
+    "bower-npm-resolver": "^0.10.0"
   }
 }
