--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "clappr": "^0.3.3",
     "clappr-thumbnails-plugin": "npm:clappr-thumbnails-plugin#^3.7.0",
+    "clappr-level-selector-plugin": "npm:level-selector#^0.2.0",
     "hls.js": "^0.10.1",
     "purescript-aff": "^5.1.1",
     "purescript-affjax": "^9.0.0",
