--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
-    "bower-resolve-webpack-plugin": "^1.0.4",
-    "pulp": "^12.3.1",
-    "webpack": "^3.10.0"
+    "pulp": "^12.3.1"
   },
   "dependencies": {
-    "bower-npm-resolver": "^0.10.0"
+    "bower-npm-resolver": "^0.10.0",
+    "bower-resolve-webpack-plugin": "^1.0.4",
+    "webpack": "^3.10.0"
   }
 }
