Cleanup project structure

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@
 /.psc*
 /.purs*
 /.psa*
+examples/events/bundle.js
+examples/simple/bundle.js
+examples/plugins/bundle.js
+examples/events/output/
+examples/plugins/output/
+examples/simple/output/
+package-lock.json
